* remove debugging logs in tests